--- a/client/src/styles/dashboard.module.css
+++ b/client/src/styles/dashboard.module.css
@@ -1,36 +1,128 @@
-body, html, #root {
-  height: 100%;
-  margin: 0;
-  font-family: Arial, sans-serif;
+body {
+  color: rgba(0, 0, 0, 0.87);
+  font-family: Roboto, Helvetica, Arial, sans-serif;
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 1.625;
+  letter-spacing: 0.00938em;
+  background-color: rgb(240, 242, 245);
+  margin: 1.5rem;
 }
 
-.app-root {
+.appRoot {
   display: flex;
-  height: 100vh;
 }
 
 .sidebar {
-  width: 220px;
-  background: #1f2937;
-  color: #fff;
-  padding: 1rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  color: white;
+  height: 100vh;
+  width: 20%;
+  box-shadow: rgba(0, 0, 0, 0.05) 0rem 1.25rem 1.6875rem 0rem;
+  /* transform: translateX(-20rem); */
+  border-width: initial;
+  border-style: none;
+  border-color: initial;
+  border-image: initial;
+  background: linear-gradient(195deg, rgb(66, 66, 74), rgb(25, 25, 25));
+  margin-right: 2rem;
+  border-radius: 0.75rem;
+  padding: 15px;
 }
 
-.sidebar h2 { font-size: 18px; margin-top: 0; }
-
-.sidebar ul { list-style: none; padding: 0; }
-.sidebar li { padding: 10px 0; cursor: pointer; color: #d1d5db; }
-
-.main-content {
-  flex: 1;
-  padding: 1rem;
-  background: #f3f4f6;
+.tableTitle {
+  margin: 0px;
+    font-size: 1rem;
+    line-height: 1.625;
+    font-family: Roboto, Helvetica, Arial, sans-serif;
+    font-weight: 700;
+    letter-spacing: 0.0075em;
+    opacity: 1;
+    text-transform: none;
+    vertical-align: unset;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
 }
 
-.panel {
-  background: #fff;
-  border-radius: 8px;
-  padding: 12px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.08);
-  margin-bottom: 16px;
+.tableTitleContainer {
+  margin-left: 16px;
+    margin-right: 16px;
+    margin-top: -24px;
+    padding: 24px 16px;
+    opacity: 1;
+    background: linear-gradient(195deg, rgb(73, 163, 241), rgb(26, 115, 232));
+    color: rgb(52, 71, 103);
+    border-radius: 0.5rem;
+    box-shadow: rgba(0, 0, 0, 0.14) 0rem 0.25rem 1.25rem 0rem, rgba(0, 187, 212, 0.4) 0rem 0.4375rem 0
+}
+
+main {
+  width: 100%;
+}
+
+ul {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+  position: relative;
+}
+
+button {
+  padding: 5px;
+  border-radius: 3px;
+  font-size: 1rem;
+  border-width: 1.7px;
+}
+
+button:hover {
+  cursor: pointer;
+  transform: scale(1.05);
+}
+
+/* .buttonsPanel { */
+  /* display: flex; */
+/* } */
+
+.buttonsPanelButtons {
+  width: max-content;
+}
+
+h6 {
+  font-size: 1.25rem;
+}
+
+li:hover {
+  cursor: pointer;
+}
+
+.tableButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  text-decoration: none;
+  width: 100%;
+  box-sizing: border-box;
+  /* text-align: left; */
+  /* padding-top: 0px; */
+  /* padding-bottom: 0px; */
+  background: linear-gradient(195deg, rgb(73, 163, 241), rgb(26, 115, 232));
+  border-radius: 0.375rem;
+}
+
+ul {
+  width: 100%;
+  text-align: center;
+}
+
+ul > li {
+  padding: 7px;
+  border-radius: 0.375rem;
+  margin-bottom: 2px;
+}
+
+ul > li:hover {
+  background-color: rgb(103, 102, 102);
 }
