--- a/client/src/styles/dashboard.module.css
+++ b/client/src/styles/dashboard.module.css
@@ -30,6 +30,8 @@ body {
   margin-right: 2rem;
   border-radius: 0.75rem;
   padding: 15px;
+  min-width: max-content;
+  min-height: 100vh;
 }
 
 .tableTitle {
@@ -46,16 +48,18 @@ body {
     color: rgb(255, 255, 255);
 }
 
-.tableTitleContainer {
-  margin-left: 16px;
+.tableHeader{
+    margin-left: 16px;
     margin-right: 16px;
     margin-top: -24px;
     padding: 24px 16px;
     opacity: 1;
+    color: 1;
+    justify-content: space-between;
     background: linear-gradient(195deg, rgb(73, 163, 241), rgb(26, 115, 232));
-    color: rgb(52, 71, 103);
+    color: white;
     border-radius: 0.5rem;
-    box-shadow: rgba(0, 0, 0, 0.14) 0rem 0.25rem 1.25rem 0rem, rgba(0, 187, 212, 0.4) 0rem 0.4375rem 0
+    box-shadow: 0 2px 4px rgba(0,0,0,0.08), 0 4px 6px rgba(0,0,0,0.06);
 }
 
 main {
@@ -85,9 +89,6 @@ button:hover {
   /* display: flex; */
 /* } */
 
-.buttonsPanelButtons {
-  width: max-content;
-}
 
 h6 {
   font-size: 1.25rem;
@@ -97,7 +98,7 @@ li:hover {
   cursor: pointer;
 }
 
-.tableButton {
+.tableButton, button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -110,6 +111,11 @@ li:hover {
   /* padding-bottom: 0px; */
   background: linear-gradient(195deg, rgb(73, 163, 241), rgb(26, 115, 232));
   border-radius: 0.375rem;
+}
+
+button {
+  color: white;
+  width: max-content;
 }
 
 ul {
@@ -125,4 +131,42 @@ ul > li {
 
 ul > li:hover {
   background-color: rgb(103, 102, 102);
+}
+
+.buttonsPanelButtons {
+  /* width: max-content; */
+  display: flex;
+
+}
+
+.buttonsPanelButtons > button {
+  margin-right: 7px;
+  max-width: max-content;
+  max-height: max-content;
+  background: linear-gradient(45deg, black, transparent);
+}
+
+.tableHeader {
+  display: flex;
+  /* z-index: 9999; */
+  z-index: auto;
+  /* position: absolute; */
+  position: relative;
+  margin: 0 16px 12px 16px;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.15),
+            0 8px 12px rgba(0,0,0,0.1);
+}
+
+h6 {
+  margin: 0;
+  margin-right: 2rem;
+}
+
+.panel {
+  margin-bottom: 2.5rem;
+}
+
+img {
+  width: 30px;
+  height: 30px;
 }
