--- a/client/src/styles/dashboard.module.css
+++ b/client/src/styles/dashboard.module.css
@@ -21,7 +21,6 @@ body {
   height: 100vh;
   width: 20%;
   box-shadow: rgba(0, 0, 0, 0.05) 0rem 1.25rem 1.6875rem 0rem;
-  /* transform: translateX(-20rem); */
   border-width: initial;
   border-style: none;
   border-color: initial;
@@ -30,8 +29,6 @@ body {
   margin-right: 2rem;
   border-radius: 0.75rem;
   padding: 15px;
-  min-width: max-content;
-  min-height: 100vh;
 }
 
 .tableTitle {
@@ -85,11 +82,6 @@ button:hover {
   transform: scale(1.05);
 }
 
-/* .buttonsPanel { */
-  /* display: flex; */
-/* } */
-
-
 h6 {
   font-size: 1.25rem;
 }
@@ -106,9 +98,6 @@ li:hover {
   text-decoration: none;
   width: 100%;
   box-sizing: border-box;
-  /* text-align: left; */
-  /* padding-top: 0px; */
-  /* padding-bottom: 0px; */
   background: linear-gradient(195deg, rgb(73, 163, 241), rgb(26, 115, 232));
   border-radius: 0.375rem;
 }
@@ -134,7 +123,6 @@ ul > li:hover {
 }
 
 .buttonsPanelButtons {
-  /* width: max-content; */
   display: flex;
 
 }
@@ -148,9 +136,7 @@ ul > li:hover {
 
 .tableHeader {
   display: flex;
-  /* z-index: 9999; */
   z-index: auto;
-  /* position: absolute; */
   position: relative;
   margin: 0 16px 12px 16px;
   box-shadow: 0 4px 6px rgba(0,0,0,0.15),
@@ -169,4 +155,77 @@ h6 {
 img {
   width: 30px;
   height: 30px;
+}
+
+.appRoot {
+  display: flex;
+  flex-direction: row;
+}
+
+@media (max-width: 768px) {
+  .appRoot {
+    flex-direction: column; 
+  }
+
+  .sidebar {
+    width: 100%;
+    height: auto;
+    margin-right: 0;
+    margin-bottom: 1rem;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  .sidebar ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+
+main {
+  width: 100%;
+  overflow-x: auto; 
+  padding: 0 1rem;
+}
+
+.tableHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;  
+  gap: 0.5rem;      
+}
+
+.buttonsPanelButtons {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+}
+
+.buttonsPanelButtons > button {
+  flex: 1 1 auto;
+  min-width: 100px;
+}
+
+.panel > div {
+  min-height: 200px; 
+  height: auto;     
+  width: 100%;
+}
+
+@media (max-width: 768px) {
+  .ag-theme-quartz {
+    font-size: 0.85rem; 
+  }
+}
+
+body {
+  font-size: 1.25rem;
+}
+
+@media (max-width: 768px) {
+  body {
+    font-size: 1rem;
+  }
 }
